--- a/.env_template
+++ b/.env_template
@@ -1,5 +1,5 @@
 FLASK_APP="main.py"
-FLASK_DEBUG=True/False # para activar el debugger
+FLASK_DEBUG=True/False # para activar o desactivar el debugger
 FLASK_PATH_SQLITE=#Ruta a la base de datos, por defecto: data/movements.db
 FLASK_SECRET_KEY="#genero la secrekey en https://randomkeygen.com"
-coin_Api_key= "isertar tu key de coinapi.io"
+coin_Api_key= "isertar tu key de coinapi.io" puedes obtenerla en https://www.coinapi.io/market-data-api/pricing
